Fleshing out 30 Mar draft

--- a/2025/2025-03-30-wir.md
+++ b/2025/2025-03-30-wir.md
@@ -11,7 +11,26 @@
 
 <hr>
 
-**Good thing we never built that back door** into Signal that James Comey wanted back in TKTK. <!-- Link tktk -->
+**Remember when** [Very Serious People](https://archive.nytimes.com/krugman.blogs.nytimes.com/2012/02/12/very-serious-question/) in Washington used to fret that encrypted messaging apps were *too* secure? Now they're suddenly not secure *enough*, following a bout of comically [boneheaded user error]() among chatty presidential advisers on Signal. <!-- -->
+
+
+- Zakaria: 4 million people have access to classified info: https://www.washingtonpost.com/opinions/2023/01/26/government-secrecy-classification-transparency-accountability/
+
+- Benjamin Franklin: "Two may keep a secret if one is dead."
+
+- In '23, FBI was still pressing the case against encryption: https://reason.com/2023/05/05/the-fbis-anti-encryption-campaign/
+
+<!-- Some additional links... -->
+
+- In Dec '24, FBI began urging Americans to use encryption: https://www.pcmag.com/news/fbi-urges-americans-to-use-encryption-after-complaining-about-it-for-years | https://www.inc.com/jason-aten/the-fbis-dire-warning-about-your-messaging-apps-leaves-out-1-important-point/91034903 | https://www.nbcnews.com/tech/security/us-officials-urge-americans-use-encrypted-apps-cyberattack-rcna182694 | https://www.pcmag.com/news/fbi-urges-americans-to-use-encryption-after-complaining-about-it-for-years
+
+- https://www.vice.com/en/article/fbi-tried-to-plant-backdoor-in-encrypted-phone-phantom-secure/
+
+- https://boingboing.net/2021/04/29/signals-response-to-fbis-grand-jury-subpoena-for-user-data-you-get-nothing-you-lose-good-day-sir.html
+
+- Epic rant by Iain Thompson on back doors: https://www.theregister.com/2019/07/25/encryption_fbi_boss/
+
+- Similar from Matt Sledge: https://theintercept.com/2025/03/25/signal-chat-encryption-hegseth-cia/
 
 <!-- 150-word lead item. Riff on Pentagon's Signal disaster this week...
 
@@ -53,6 +72,21 @@ The same goes if you want to encrypt pictures of your kids or a conversation wit
 - Start doing videos on YouTube and/or Substack
 
 -->
+
+https://www.washingtonpost.com/opinions/2025/03/24/peak-tv-uncertain-future-severance-white-lotus/
+
+https://www.coindesk.com/markets/2025/03/25/blackrock-to-list-bitcoin-etp-in-europe-in-first-crypto-foray-outside-u-s
+
+https://www.coindesk.com/markets/2025/03/25/etoro-files-for-ipo-after-crypto-drives-2024-revenue-surge
+
+https://decrypt.co/311449/polymarket-to-accept-solana-deposits-starting-today
+
+https://decrypt.co/311466/kentucky-bitcoin-ethereum-self-custody-law
+
+https://decrypt.co/311505/gamestop-rumored-buy-bitcoin-ceo-poses-michael-saylor
+
+https://decrypt.co/311454/binance-suspends-employee-misconduct-trading
+
 
 ### Odds & Ends
 
