Updating spring '25 drafts

--- a/2025/2025-03-30-wir.md
+++ b/2025/2025-03-30-wir.md
@@ -1,10 +1,7 @@
-# The hidden lessons of Hegseth's Signal misadventures
-## See, this is why encryption back doors are a terrible idea.
-
+# Signalgate turns the tables on Washington
+## TKTKT
 
 ![User holding a smartphone](https://w3w.news/img/phoneuser-yura-fresh-1920.jpg)
-
-<!-- Backup photo option. This one is less eye-catching but a little more "on the news." Contains the Signal logo if we really need that to complement the copy later in the week: https://w3w.news/img/signal-mika-baumeister-1920.jpg -->
 
 *Photo by Yura Fresh via Unsplash*
 
@@ -14,84 +11,37 @@
 
 **Remember when** [Very Serious People](https://archive.nytimes.com/krugman.blogs.nytimes.com/2012/02/12/very-serious-question/) in Washington used to fret that encrypted messaging apps were *too* secure? Now they're suddenly not secure *enough*, following a bout of comically [boneheaded user error]() among chatty presidential advisers on Signal. <!-- -->
 
+<!-- Transition to list items related to the big Signal story... -->
+
+- In Dec '24, FBI began urging Americans to use encryption: https://www.pcmag.com/news/fbi-urges-americans-to-use-encryption-after-complaining-about-it-for-years | https://www.inc.com/jason-aten/the-fbis-dire-warning-about-your-messaging-apps-leaves-out-1-important-point/91034903 | https://www.nbcnews.com/tech/security/us-officials-urge-americans-use-encrypted-apps-cyberattack-rcna182694 | https://www.pcmag.com/news/fbi-urges-americans-to-use-encryption-after-complaining-about-it-for-years
+
+- Similar from Matt Sledge: https://theintercept.com/2025/03/25/signal-chat-encryption-hegseth-cia/
 
 - Zakaria: 4 million people have access to classified info: https://www.washingtonpost.com/opinions/2023/01/26/government-secrecy-classification-transparency-accountability/
 
 - Benjamin Franklin: "Two may keep a secret if one is dead."
 
-- In '23, FBI was still pressing the case against encryption: https://reason.com/2023/05/05/the-fbis-anti-encryption-campaign/
+- Trump in his first term.
 
-<!-- Some additional links... -->
+- Good side: Goldberg
 
-- In Dec '24, FBI began urging Americans to use encryption: https://www.pcmag.com/news/fbi-urges-americans-to-use-encryption-after-complaining-about-it-for-years | https://www.inc.com/jason-aten/the-fbis-dire-warning-about-your-messaging-apps-leaves-out-1-important-point/91034903 | https://www.nbcnews.com/tech/security/us-officials-urge-americans-use-encrypted-apps-cyberattack-rcna182694 | https://www.pcmag.com/news/fbi-urges-americans-to-use-encryption-after-complaining-about-it-for-years
+### Five Things: March 23-29, 2025
 
-- https://www.vice.com/en/article/fbi-tried-to-plant-backdoor-in-encrypted-phone-phantom-secure/
+**I'm trying something a little different** with my news summary this time, in the spirit of "less is more." This list comprises just five stories about emerging tech that stood out to me as worth sharing with you:
 
-- https://boingboing.net/2021/04/29/signals-response-to-fbis-grand-jury-subpoena-for-user-data-you-get-nothing-you-lose-good-day-sir.html
+- **Bitcoin is set to end the quarter in the red.** With a little over 24 hours left in 2025's first period, the token is [down about 7%](https://finance.yahoo.com/video/bitcoin-close-q1-red-peaks-185459173.html) for the quarter. Worries about both U.S. growth and a possible resurgence in inflation have hampered bitcoin, stocks, and other risky assets recently. However, The Block's Brandon Kae and Ivan Wu note that bitcoin's share of the broader token market [hasn't flagged](https://www.theblock.co/post/348679/bitcoin-dominance-hits-58-as-alt-season-remains-elusive), recently hovering around 60%, as investors' appetite for altcoins hasn't picked up. Meanwhile, crypto trading volume has [plunged 70%](https://www.theblock.co/post/348685/crypto-trading-volumes-plunge-70-from-the-peak-as-post-election-hype-fades) from its peak as investors' euphoria following November's U.S. presidential election has faded.
 
-- Epic rant by Iain Thompson on back doors: https://www.theregister.com/2019/07/25/encryption_fbi_boss/
+- **But ether's price has fared even worse,** off more than 40% so far in 2025. Ethereum has largely [sat out](https://peteramckay.medium.com/a-twist-in-the-ethereum-solana-battle-59dfae42af81) the recent surge in memecoin activity, among other issues. The Financial Times' Philip Stafford says Ethereum is now suffering a full-blown ["midlife crisis,"](https://news.google.com/read/CBMicEFVX3lxTE50RVB3QW5JUnYxUzlGRVVZakl3ODZocjNGSnI0QkVCVVNBaFpNNFlNZVdvaDJMUlRGbXBBSFZzb2trQTZET1o5UjNTRUxxQzBxQnYxVVRZSkcwYmtwMmhmMWhNclhiU1dMNDJKVmJSZmc?hl=en-US&gl=US&ceid=US%3Aen) lacking an investment narrative as cohesive as bitcoin's "digital gold" thesis.
 
-- Similar from Matt Sledge: https://theintercept.com/2025/03/25/signal-chat-encryption-hegseth-cia/
+- **The Federal Deposit Insurance Corp.,** a regulatory agency that has acted as a safety net for U.S. banking since the Great Depression, said the private-sector banks it supervises can now engage in crypto activities without seeking prior approval. ([Decrypt](https://decrypt.co/312215/fdic-clears-path-for-bank-crypto-activities))
 
-<!-- 150-word lead item. Riff on Pentagon's Signal disaster this week...
+- **The genetic testing company 23andMe** filed for [Chapter 11 bankruptcy protection](https://apnews.com/article/23andme-chapter-11-bankruptcy-wojcicki-resigns-9827549d9171a537e76f60cb950d1823), raising concerns that the personal data of 15 million users may end up in the hands of a new, yet-to-be-determined buyer. California's attorney general issued a [consumer alert](https://oag.ca.gov/news/press-releases/attorney-general-bonta-urgently-issues-consumer-alert-23andme-customers) with instructions on how to delete your data if you want to opt out of it being transferred in any potential bankruptcy sale.
 
-1
-
-2. Encryption for me but not for thee.
-
-3. Encryption will not protect systems or organizations from human error.
-
-If you are oblivious enough to copy a magazine editor on the message string where you're planning to bomb a foreign country, no form of encryption or any other technology will save you. The solution is to be smarter and do better, full stop.
-
-The same goes if you want to encrypt pictures of your kids or a conversation with your spouse or one with your boss or anything else.
-
--->
-
-### Week in Review: March 23-29, 2025
-
-
-- Bloomberg: Tokenized RWA market has reached $5B ([]()) <!-- Need link -->
-
-- Crucible Capital's Meltem Demirors says a lot of bitcoin ETF have proven to be "arbitrage buyers." They're buying shares, shorting bitcoin, and profiting on the spread. This isn't really a bullish thing for bitcoin, which helps explain sluggish price action. <!-- Theory offered on Bloomberg Crypto on 25 Mar, around the 22-min mark. Really interesting stuff. Grab YouTube link when it's available. -->
-
-- 23andme files for bankruptcy, may auction off user DNA info. Yikes. <!-- Need link -->
-
-- Genius Act update from the Crypto in America newsletter: https://www.cryptoinamerica.com/p/white-house-pushes-to-get-stablecoin
-
-- Good Bloomberg Originals vid on quantum computing: https://www.youtube.com/watch?v=1_gJp2uAjO0&t=704s
-
-- Ahrefs picks on AI content tools. https://ahrefs.com/blog/ai-content-creation-tools/
-
-### Community
-
-<!--
-
-- Launch new Discord channel for w3w...
-
-- Deprecate LinkedIn cross-posting
-
-- Start doing videos on YouTube and/or Substack
-
--->
-
-https://www.washingtonpost.com/opinions/2025/03/24/peak-tv-uncertain-future-severance-white-lotus/
-
-https://www.coindesk.com/markets/2025/03/25/blackrock-to-list-bitcoin-etp-in-europe-in-first-crypto-foray-outside-u-s
-
-https://www.coindesk.com/markets/2025/03/25/etoro-files-for-ipo-after-crypto-drives-2024-revenue-surge
-
-https://decrypt.co/311449/polymarket-to-accept-solana-deposits-starting-today
-
-https://decrypt.co/311466/kentucky-bitcoin-ethereum-self-custody-law
-
-https://decrypt.co/311505/gamestop-rumored-buy-bitcoin-ceo-poses-michael-saylor
-
-https://decrypt.co/311454/binance-suspends-employee-misconduct-trading
-
+- **ICYMI:** The Bloomberg Originals documentary series did an excellent [episode about quantum computing](https://www.youtube.com/watch?v=1_gJp2uAjO0&t=704s) in September. Just belatedly caught up on it myself, and I must say I've never experienced tech journalism making such a swinging from mind-numbing to mind-bending in less than 30 minutes. 😊
 
 ### Odds & Ends
 
-- WaPo on disappearing photo archives. https://www.washingtonpost.com/opinions/interactive/2025/photography-history-archive-photojournalism/ <!-- Get Google News link late in the week. -->
+- **Photo archives are disappearing** at an alarming rate due to a complex mix of problems. Among the culprits: closures of struggling print publications, lack of digitization of old prints, and copyright considerations. ([Washington Post](https://news.google.com/read/CBMiowFBVV95cUxQcjZQODVyZDFxeTg0QWNuMVB1ck54R3VMaWRZX2NTSkk3bWI4MjZMVFo2T0ZTZ0NtQkJVaXpSakRyRVNLbDZFRjc1UzRWOTdZSEo2LUFOSjRqQm5QSHhDb1IwUEo2NUtrSjNyZVJvNDJRYWNoV1JGM19DOU1fdEoyN1Q5R0c2QTdaeTFKc1E0bE1GMkFOaWZkbnpFUFpSTkpvYm1r?hl=en-US&gl=US&ceid=US%3Aen))
 
 - **Sandwiches in New York** have become enormous. ([Gothamist](https://gothamist.com/arts-entertainment/sandwiches-in-nyc-have-become-enormous-and-too-big-to-eat-so-i-tried-some))
 
