Fleshing out summaries, headlines

--- a/2025/2025-03-30-wir.md
+++ b/2025/2025-03-30-wir.md
@@ -1,5 +1,5 @@
-# Signalgate turns the tables on Washington
-## TKTKT
+# Signalgate flips Washington's script on encrypted messaging
+## We've come a long way indeed from the post-9/11 freakout over pro-privacy apps.
 
 ![User holding a smartphone](https://w3w.news/img/phoneuser-yura-fresh-1920.jpg)
 
@@ -27,7 +27,7 @@
 
 ### Five Things: March 23-29, 2025
 
-**I'm trying something a little different** with my news summary this time, in the spirit of "less is more." This list comprises just five stories about emerging tech that stood out to me as worth sharing with you:
+**I'm trying something a little different** with my news summary this time, in the spirit of "less is more." This list comprises just five recent stories about emerging tech that stood out to me as worth sharing with you:
 
 - **Bitcoin is set to end the quarter in the red.** With a little over 24 hours left in 2025's first period, the token is [down about 7%](https://finance.yahoo.com/video/bitcoin-close-q1-red-peaks-185459173.html) for the quarter. Worries about both U.S. growth and a possible resurgence in inflation have hampered bitcoin, stocks, and other risky assets recently. However, The Block's Brandon Kae and Ivan Wu note that bitcoin's share of the broader token market [hasn't flagged](https://www.theblock.co/post/348679/bitcoin-dominance-hits-58-as-alt-season-remains-elusive), recently hovering around 60%, as investors' appetite for altcoins hasn't picked up. Meanwhile, crypto trading volume has [plunged 70%](https://www.theblock.co/post/348685/crypto-trading-volumes-plunge-70-from-the-peak-as-post-election-hype-fades) from its peak as investors' euphoria following November's U.S. presidential election has faded.
 
@@ -35,9 +35,9 @@
 
 - **The Federal Deposit Insurance Corp.,** a regulatory agency that has acted as a safety net for U.S. banking since the Great Depression, said the private-sector banks it supervises can now engage in crypto activities without seeking prior approval. ([Decrypt](https://decrypt.co/312215/fdic-clears-path-for-bank-crypto-activities))
 
-- **The genetic testing company 23andMe** filed for [Chapter 11 bankruptcy protection](https://apnews.com/article/23andme-chapter-11-bankruptcy-wojcicki-resigns-9827549d9171a537e76f60cb950d1823), raising concerns that the personal data of 15 million users may end up in the hands of a new, yet-to-be-determined buyer. California's attorney general issued a [consumer alert](https://oag.ca.gov/news/press-releases/attorney-general-bonta-urgently-issues-consumer-alert-23andme-customers) with instructions on how to delete your data if you want to opt out of it being transferred in any potential bankruptcy sale.
+- **The genetic testing company 23andMe** filed for [Chapter 11 bankruptcy protection](https://apnews.com/article/23andme-chapter-11-bankruptcy-wojcicki-resigns-9827549d9171a537e76f60cb950d1823), raising concerns that the personal data of 15 million users may end up in the hands of a new, yet-to-be-determined buyer. California's attorney general issued a [consumer alert](https://oag.ca.gov/news/press-releases/attorney-general-bonta-urgently-issues-consumer-alert-23andme-customers) with instructions for deleting your data if you want to opt out of it being transferred in any potential company sale.
 
-- **ICYMI:** The Bloomberg Originals documentary series did an excellent [episode about quantum computing](https://www.youtube.com/watch?v=1_gJp2uAjO0&t=704s) in September. Just belatedly caught up on it myself, and I must say I've never experienced tech journalism making such a swinging from mind-numbing to mind-bending in less than 30 minutes. 😊
+- **ICYMI:** The Bloomberg Originals documentary series did an excellent [episode about quantum computing](https://www.youtube.com/watch?v=1_gJp2uAjO0&t=704s) in September. Just belatedly caught up on it myself, and I must say I've never experienced tech journalism making such a swing from mind-numbing to mind-bending in less than 30 minutes. 😊
 
 ### Odds & Ends
 
