Fleshing out lede item

--- a/2025/2025-03-30-wir.md
+++ b/2025/2025-03-30-wir.md
@@ -9,21 +9,31 @@
 
 <hr>
 
-**Remember when** [Very Serious People](https://archive.nytimes.com/krugman.blogs.nytimes.com/2012/02/12/very-serious-question/) in Washington used to fret that encrypted messaging apps were *too* secure? Now they're suddenly not secure *enough*, following a bout of comically [boneheaded user error]() among chatty presidential advisers on Signal. <!-- -->
+**Remember when** [Very Serious People](https://archive.nytimes.com/krugman.blogs.nytimes.com/2012/02/12/very-serious-question/) in Washington used to fret that encrypted messaging apps were *too* secure? Now they're suddenly not secure *enough*, following a bout of comically [boneheaded user error](https://news.google.com/read/CBMirAFBVV95cUxNRGxtR3dRdS1NS0Qyc3R3RkZNSWdTQzJhTGpfV0tOaktUYjNMQnpBSmE4ckZIZzBWOEJTRFhvSTZlcUhfWV9hbVpXUzlBMjA5eFRYSk5zdzQxNE5qZlVGOHhFZ1V6UkNLb0hiRmdmRlQ5WW1tbW51U2toZ1BUZkwzTkNLSklTVEltbFRhWVMxWE9CZEZGcHZ6dU53a1drZXJhMDNucEw2NnVVLXl2?hl=en-US&gl=US&ceid=US%3Aen) among chatty presidential advisers on Signal.
 
-<!-- Transition to list items related to the big Signal story... -->
+The serious political ramifications of the fiasco have been extensively covered elsewhere. However, for the particular purposes of this newsletter, let it suffice that a story about encryption doesn't garner such widespread attention among non-geeks very often.
 
-- In Dec '24, FBI began urging Americans to use encryption: https://www.pcmag.com/news/fbi-urges-americans-to-use-encryption-after-complaining-about-it-for-years | https://www.inc.com/jason-aten/the-fbis-dire-warning-about-your-messaging-apps-leaves-out-1-important-point/91034903 | https://www.nbcnews.com/tech/security/us-officials-urge-americans-use-encrypted-apps-cyberattack-rcna182694 | https://www.pcmag.com/news/fbi-urges-americans-to-use-encryption-after-complaining-about-it-for-years
+Between the lines, "Signalgate" also represents quite a shift in the general narrative around encryption since the last time many "normies" might have tuned in. 
 
-- Similar from Matt Sledge: https://theintercept.com/2025/03/25/signal-chat-encryption-hegseth-cia/
+Consider: 
 
-- Zakaria: 4 million people have access to classified info: https://www.washingtonpost.com/opinions/2023/01/26/government-secrecy-classification-transparency-accountability/
+- **After 9/11,** the FBI began publicly whinging that encrypted messaging apps were being used by terrorists to "go dark" while planning attacks, making law enforcement agencies' job more difficult. In particular, when James Comey was FBI director, [he lobbied](https://www.computerworld.com/article/1605439/fbi-director-calls-for-greater-police-access-to-communications-2.html) publicly and repeatedly for tech companies to build back doors into their encrypted devices and apps, supposedly for law enforcement's use only. This was largely how the product category was covered in the mainstream U.S. press for over a decade.
 
-- Benjamin Franklin: "Two may keep a secret if one is dead."
+- **For its part,** the tech industry has always resisted building back doors, arguing that it works against the greater good for all users. Engineers say that any back door a tech company might build into its products at the bewhest of law enforcement [would inevitably be discovered](https://engineering.jhu.edu/magazine/2016/01/back-talk/) and exploited by other actors as well, thus jeopardizing *everyone's* privacy. In the wake of Signalgate, that argument looks all the wiser, no?
 
-- Trump in his first term.
+- **In December,** the FBI finally made a big flip-flop itself, [urging all Americans](https://www.pcmag.com/news/fbi-urges-americans-to-use-encryption-after-complaining-about-it-for-years) to use encrypted messaging to prevent attacks by Chinese hackers in particular. (So much for the threat of terrorists from elsewhere plotting in encrypted secrecy, I guess.) The bureau's reversal was not at all lost on tech reporters, though it seems a good bet that much of the audience probably didn't notice at the time.  
 
-- Good side: Goldberg
+- **In Senate testimony Tuesday,** CIA Director John Ratliffe said for the first time in public Signal comes installed on agency computers. ([The Intercept](https://theintercept.com/2025/03/25/signal-chat-encryption-hegseth-cia/))
+
+- **But there are other technical considerations particular to Signalgate.** Remember, the controversey involves a group message string conducted via off-the-shelf mobile phones, not desktop PCs. Those phones could be subject to malware or vulnerabilities in their operating systems or mobile networks. 
+
+Finally, if there's a silver lining in Signalgate, it's perhaps that the crisis has spotlighted one person who unambiguously acted in the public's best interest and has been fully transparent: Atlantic editor-in-chief Jeffrey Goldberg.
+
+He got off White House officials' Signal chat when he realized he'd been mistakenly included. In lieu of immediately taking to Twitter, he also waited to write about it and did additional reporting to gather more facts. 
+
+That's a shining moment in journalism that shouldn't pass without comment, in my opinion. At a time when America's relationship with democracy is frankly going a bit wobbly, and when it's become disturbingly fashionable to slag on the press while getting your news from Uncle Moe on Facebook, here was a professional editor truly acting in the public interest.
+
+Yes, it still happens. Probably more often than you think.
 
 ### Five Things: March 23-29, 2025
 
