--- a/2025/2025-03-30-wir.md
+++ b/2025/2025-03-30-wir.md
@@ -13,7 +13,7 @@
 
 The serious political ramifications of the fiasco have been extensively covered elsewhere. For our purposes here, let it suffice that it's seldom a story of such magnitude about encryption commands this level of attention among non-geeks.
 
-Between the lines, "Signalgate" also represents quite a new narrative about encryption since the last time many "normies" might have tuned in. Consider: 
+Between the lines, "Signalgate" also represents quite a new narrative about encryption since the last time many "normies" might have tuned in. Consider:
 
 - **In the years after 9/11,** the FBI often whinged that encrypted messaging apps were being used by terrorists to "go dark" while planning attacks, making law enforcement agencies' job more difficult. In particular, when James Comey was FBI director, [he lobbied](https://www.computerworld.com/article/1605439/fbi-director-calls-for-greater-police-access-to-communications-2.html) publicly and repeatedly for tech companies to build "back doors" into their encrypted devices and apps, supposedly for law enforcement's use only. This was largely how the product category was covered in the mainstream U.S. press for over a decade.
 
@@ -21,9 +21,9 @@ Between the lines, "Signalgate" also represents quite a new narrative about encr
 
 - **In December,** the FBI finally made a big flip-flop itself, [urging all Americans](https://www.pcmag.com/news/fbi-urges-americans-to-use-encryption-after-complaining-about-it-for-years) to use encrypted messaging to prevent attacks by Chinese hackers in particular. (So much for the threat of al-Qaeda and the like, I guess.) The bureau's reversal was not at all lost on tech reporters, though it seems a good bet that much of the audience probably didn't notice.  
 
-- **In Senate testimony Tuesday,** CIA Director John Ratliffe said for the first time in public Signal comes installed on agency computers. Who knew! ([The Intercept](https://theintercept.com/2025/03/25/signal-chat-encryption-hegseth-cia/))
+- **In Senate testimony Tuesday,** CIA Director John Ratliffe said for the first time in public that Signal comes installed on agency computers. Who knew! ([The Intercept](https://theintercept.com/2025/03/25/signal-chat-encryption-hegseth-cia/))
 
-- **But there are other technical considerations at play in Signalgate.** Remember, the controversey involves a group message string conducted via off-the-shelf mobile phones, not desktop PCs. Those phones could be subject to unique forms of malware or vulnerabilities in their operating systems or mobile networks. 
+- **But there are other technical considerations at play in Signalgate.** Remember, the controversey involves a group message string conducted via off-the-shelf mobile phones, not desktop PCs. Those phones could be subject to unique forms of malware or vulnerabilities in their operating systems or mobile networks.
 
 Finally, if there's a silver lining in Signalgate, it's perhaps that the crisis has spotlighted one person who unambiguously acted in the public's best interest and has been fully transparent: Atlantic Editor-in-Chief Jeffrey Goldberg.
 
