Update early, early draft for 6 April '25

--- a/2025/2025-04-06-wir.md
+++ b/2025/2025-04-06-wir.md
@@ -12,73 +12,27 @@
 
 <!-- 150-word lead item. Some possibilities...
 
+- QUARTERLY: Wrap up a bunch of market factoids for the first quarter.
+
 - GOUP: One of the subtle bad ideas of the Trump admin is that its fixing the frame of 'number go up' around blockchain technology.
 
 - BOYCOTTS: Why withholding money from a publicly traded company works. You only need to deny marginal metrics, not move them to zero in absolute terms.
 
 -->
-<!-- 150-word lead item.
-
-Some notes and letftovers from last week...
-
-- In '23, FBI was still pressing the case against encryption: https://reason.com/2023/05/05/the-fbis-anti-encryption-campaign/
-
-
-
-- https://www.vice.com/en/article/fbi-tried-to-plant-backdoor-in-encrypted-phone-phantom-secure/
-
-- https://boingboing.net/2021/04/29/signals-response-to-fbis-grand-jury-subpoena-for-user-data-you-get-nothing-you-lose-good-day-sir.html
-
-- Epic rant by Iain Thompson on back doors: https://www.theregister.com/2019/07/25/encryption_fbi_boss/
-
-1
-
-2. Encryption for me but not for thee.
-
-3. Encryption will not protect systems or organizations from human error.
-
-If you are oblivious enough to copy a magazine editor on the message string where you're planning to bomb a foreign country, no form of encryption or any other technology will save you. The solution is to be smarter and do better, full stop.
-
-The same goes if you want to encrypt pictures of your kids or a conversation with your spouse or one with your boss or anything else.
-
-ends quarter down: https://finance.yahoo.com/video/bitcoin-close-q1-red-peaks-185459173.html | Yahoo link Crypto volumes down:
-
-https://www.theblock.co/post/348685/crypto-trading-volumes-plunge-70-from-the-peak-as-post-election-hype-fades |
-
-https://www.theblock.co/post/348679/bitcoin-dominance-hits-58-as-alt-season-remains-elusive  
-
-
-Crucible Capital's Meltem Demirors says a lot of bitcoin ETF have proven to be "arbitrage buyers." They're buying shares, shorting bitcoin, and profiting on the spread. This isn't really a bullish thing for bitcoin, which helps explain sluggish price action. <!-- Theory offered on Bloomberg Crypto on 25 Mar, around the 22-min mark. Really interesting stuff. Grab YouTube link when it's available. | https://www.coindesk.com/markets/2025/03/25/blackrock-to-list-bitcoin-etp-in-europe-in-first-crypto-foray-outside-u-s | Bloomberg: Tokenized RWA market has reached $5B ([]())
-
-- https://www.coindesk.com/markets/2025/03/25/etoro-files-for-ipo-after-crypto-drives-2024-revenue-surge
-
-- https://decrypt.co/311449/polymarket-to-accept-solana-deposits-starting-today
-
-- Genius Act update from the Crypto in America newsletter: https://www.cryptoinamerica.com/p/white-house-pushes-to-get-stablecoin
-
-- Ahrefs picks on AI content tools. https://ahrefs.com/blog/ai-content-creation-tools/
-
-- https://www.washingtonpost.com/opinions/2025/03/24/peak-tv-uncertain-future-severance-white-lotus/
-
-- https://decrypt.co/311466/kentucky-bitcoin-ethereum-self-custody-law
-
-- https://decrypt.co/311505/gamestop-rumored-buy-bitcoin-ceo-poses-michael-saylor
-
-- https://decrypt.co/311454/binance-suspends-employee-misconduct-trading
-
--->
 
 ### Week in Review: March 30 to April 5, 2025
 
+- **Coinbase shares suffered their steepest quarterly drop** since FTX's collapse, off 33% in the first quarter. ([Cointelegraph](https://cointelegraph.com/news/coinbase-sees-worst-quarter-since-ftx-collapse))
+  
+- eToro IPO update ([]()) <!-- Link tk if it's of interest. Item is also cbk if necessary. -->
+
 - TK ([]())
-- TK ([]())
+
 - TK ([]())
 
 ### Community
 
 <!--
-
-Launch new Discord channel for w3w...
 
 - TK ([]())
 - TK ([]())
