Adding content to April '25 drafts

--- a/2025/2025-04-06-wir.md
+++ b/2025/2025-04-06-wir.md
@@ -1,77 +1,62 @@
-# tktk
-## tktk
+# Tech tariffs tktktk
+## TKTKTK
 
-![Robot manning a workstation](https://images.unsplash.com/photo-1578374173703-71809a1757b1)
+![Sunset at the Port of Oakland](https://w3w.news/img/ronan-furuta-full-1920.jpg)
 
-*Photo by Rod Long via Unsplash*
+*Sunset at the Port of Oakland, California. Photo by Ronan Furuta via Unsplash*
+
+<!--
+
+Backup option for photo is available at https://w3w.news/img/erik-mclean-1920.jpg
+
+If we use the backup, credit to Erik McLean via Unsplash.
+
+-->
 
 *<strong>Before we begin,</strong> a big thank-you to the paid subscribers who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe).* 😊
 
 <hr>
 
+**Tariffs aren't just about physical goods** like autos, food, and clothes. Service-oriented sectors like tech may also be heavily affected in the global trade war that America just set off.
 
-<!-- 150-word lead item. Some possibilities...
+<!-- TECHTARIFFS: All this stuff about steel and cars is fine. But how do the tariffs affect tech? -->
 
-- GOUP: One of the subtle bad ideas of the Trump admin is that its fixing the frame of 'number go up' around blockchain technology.
+- Friedman columns: <!-- Links TK -->
 
-- BOYCOTTS: Why withholding money from a publicly traded company works. You only need to deny marginal metrics, not move them to zero in absolute terms.
+- Zakaria take on the macroeconomics of tariffs. <!-- Link TK -->
 
--->
-<!-- 150-word lead item.
+- Crypto not affected so far. <!-- -->
 
-Some notes and letftovers from last week...
+- Taiwan tariffs don't apply to chips: https://www.independent.co.uk/news/world/americas/trump-tariffs-countries-list-uk-russia-north-korea-b2727282.html
 
-- In '23, FBI was still pressing the case against encryption: https://reason.com/2023/05/05/the-fbis-anti-encryption-campaign/
+- Relevant Google news search: https://news.google.com/search?q=tariffs%20tech%20industry&hl=en-US&gl=US&ceid=US%3Aen
 
+- Tech lobby is hoping US tariffs might be leverage to wrangle concessions out of relatively tough European regulators: https://www.politico.com/news/2025/04/02/tech-tariffs-optimism-030088
 
+- Markets: Nasdaq entering bear market, etc. https://www.reuters.com/technology/apple-shares-drop-7-frankfurt-after-trump-tariffs-china-2025-04-03/
 
-- https://www.vice.com/en/article/fbi-tried-to-plant-backdoor-in-encrypted-phone-phantom-secure/
+- Gadgets an obvious casualty: https://www.cnbc.com/2025/04/02/small-tech-firms-left-in-limbo-by-shifting-trump-tariff-policy.html | https://finance.yahoo.com/news/live/trump-tariffs-live-updates-china-retaliates-with-34-tariff-as-markets-suffer-from-fallout-191201417.html | The Hill: https://thehill.com/policy/technology/5231124-trump-tariffs-tech-industry/
 
-- https://boingboing.net/2021/04/29/signals-response-to-fbis-grand-jury-subpoena-for-user-data-you-get-nothing-you-lose-good-day-sir.html
+- Preliminary WSJ update on Big Tech and tariffs: https://www.wsj.com/livecoverage/trump-tariffs-trade-war-stock-market-04-03-2025/card/plenty-of-tariff-pain-for-big-tech-from-supply-chains-to-advertising-impact-mWo7CTPhMzNfgknCLGC7
 
-- Epic rant by Iain Thompson on back doors: https://www.theregister.com/2019/07/25/encryption_fbi_boss/
+- Nintendo switch pre-orders canceled.
 
-1
+- UK's Starmer offering US tech companies tax cuts: https://www.theguardian.com/us-news/2025/apr/01/starmer-offered-big-us-tech-firms-tax-cuts-in-return-for-lower-trump-tariffs
 
-2. Encryption for me but not for thee.
+- Semafor coverage: https://www.semafor.com/article/04/03/2025/what-trumps-tariffs-mean-for-the-tech-industry
 
-3. Encryption will not protect systems or organizations from human error.
+- Klarna IPO delayed.
 
-If you are oblivious enough to copy a magazine editor on the message string where you're planning to bomb a foreign country, no form of encryption or any other technology will save you. The solution is to be smarter and do better, full stop.
+### Five Things: March 30 to April 5, 2025
 
-The same goes if you want to encrypt pictures of your kids or a conversation with your spouse or one with your boss or anything else.
+- Bosa video on AI for CNBC. ([]()) <!-- Link TK -->
 
-ends quarter down: https://finance.yahoo.com/video/bitcoin-close-q1-red-peaks-185459173.html | Yahoo link Crypto volumes down:
-
-https://www.theblock.co/post/348685/crypto-trading-volumes-plunge-70-from-the-peak-as-post-election-hype-fades |
-
-https://www.theblock.co/post/348679/bitcoin-dominance-hits-58-as-alt-season-remains-elusive  
-
-
-Crucible Capital's Meltem Demirors says a lot of bitcoin ETF have proven to be "arbitrage buyers." They're buying shares, shorting bitcoin, and profiting on the spread. This isn't really a bullish thing for bitcoin, which helps explain sluggish price action. <!-- Theory offered on Bloomberg Crypto on 25 Mar, around the 22-min mark. Really interesting stuff. Grab YouTube link when it's available. | https://www.coindesk.com/markets/2025/03/25/blackrock-to-list-bitcoin-etp-in-europe-in-first-crypto-foray-outside-u-s | Bloomberg: Tokenized RWA market has reached $5B ([]())
-
-- https://www.coindesk.com/markets/2025/03/25/etoro-files-for-ipo-after-crypto-drives-2024-revenue-surge
-
-- https://decrypt.co/311449/polymarket-to-accept-solana-deposits-starting-today
-
-- Genius Act update from the Crypto in America newsletter: https://www.cryptoinamerica.com/p/white-house-pushes-to-get-stablecoin
-
-- Ahrefs picks on AI content tools. https://ahrefs.com/blog/ai-content-creation-tools/
-
-- https://www.washingtonpost.com/opinions/2025/03/24/peak-tv-uncertain-future-severance-white-lotus/
-
-- https://decrypt.co/311466/kentucky-bitcoin-ethereum-self-custody-law
-
-- https://decrypt.co/311505/gamestop-rumored-buy-bitcoin-ceo-poses-michael-saylor
-
-- https://decrypt.co/311454/binance-suspends-employee-misconduct-trading
-
--->
-
-### Week in Review: March 30 to April 5, 2025
+- TC story questioning a16z-backed startup 11x's user metrics: https://techcrunch.com/2025/03/24/a16z-and-benchmark-backed-11x-has-been-claiming-customers-it-doesnt-have/ ([]())
 
 - TK ([]())
+
 - TK ([]())
+
 - TK ([]())
 
 ### Community
